-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8008026 | 8 | Joseph Provino | P4 | Resolved | Fixed | b77 |
INCLUDE_ALTERNATE_GCS was introduces by:
JDK-7189254: Change makefiles for more flexibility to override defaults
There's now two defines used to exclude all non-serial GCs: SERIALGC and INCLUDE_ALTERNATE_GCS.
We'd like to unify these into one define named INCLUDE_ALL_GCS.
There's now two defines used to exclude all non-serial GCs: SERIALGC and INCLUDE_ALTERNATE_GCS.
We'd like to unify these into one define named INCLUDE_ALL_GCS.
- backported by
-
JDK-8008026 Unify SERIALGC and INCLUDE_ALTERNATE_GCS
-
- Resolved
-
- relates to
-
JDK-8201370 GC specific data is referred from common precompiled headers and defNewGeneration.cpp
-
- Resolved
-
-
JDK-8006357 Need a stable way to select parts of the VM to compile in and out
-
- Closed
-
-
JDK-8201372 AARCH32 - 'minimal' build fails because CMS bits are referred unconditionally
-
- Closed
-