8005915: Unify SERIALGC and INCLUDE_ALTERNATE_GCS

Rename INCLUDE_ALTERNATE_GCS to INCLUDE_ALL_GCS and replace SERIALGC with INCLUDE_ALL_GCS.

Reviewed-by: coleenp, stefank